infrastructure/registry/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot-headless
  namespace: registry
  labels:
    app.kubernetes.io/name: zot
    app.kubernetes.io/component: registry
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: zot
  ports:
    - name: https
      port: 443
      targetPort: registry
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: zot
  namespace: registry
  annotations:
    lbipam.cilium.io/ips: 192.168.187.211
  labels:
    app.kubernetes.io/name: zot
    app.kubernetes.io/component: registry
    homelab.tiborsuty.io/load-balancer-pool: lan-registry
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/name: zot
  ports:
    - name: https
      port: 443
      targetPort: registry
      protocol: TCP
